Fix Visibility

--- a/public/styles.css
+++ b/public/styles.css
@@ -113,11 +113,13 @@ body {
   bottom: 3rem;
   width: 20%;
   opacity: 0;
+  visibility: hidden;
   transition: all 1s;   
 }
 
 .info-visible{
   opacity: 1;
+  visibility: visible;
 }
 
 .infoBtn {
@@ -245,6 +247,7 @@ body {
 
 .footer {
    position:fixed;
+   z-index: 2;
    left: 0;
    bottom: 0;
    width: 100%;
